<resources>
    <string name="app_name">SubmissionAwal</string>
    <string name="username">Username</string>
    <string name="user_url">User URL</string>
    <string name="searchbar_hint">Kepo kamu ya</string>
    <string name="name">Name</string>
    <string name="following">Following</string>
    <string name="followers">Followers</string>
    <string name="repo">Repositories</string>
    <string name="following_number">100</string>
    <string name="followers_number">100</string>
    <string name="repo_number">100</string>
    <string name="no_data">Tidak ada data</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tab_text_1">Followers</string>
    <string name="tab_text_2">Following</string>
</resources>